adcionado um subtitulo e cor da fonte e cor de fundo

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <title> Projeto Legal</title>
  </head>
         
-        <body>
+        <body style= "background-color:blue; color:blueviolet;">
             <h1> Projeto Legal</h1>
-
+            <h2> Página legal para aprender git</h2>
         </body>
 
 </html>
