Atualização da página home

--- a/home.html
+++ b/home.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home</title>
 </head>
-<body>
+<body style="background-color:darkblue; color:floralwhite">
     <h1> Homer Simpson</h1>
+    <h2>Nosso site legal merece uma casa</h2>
+    <p> Uma casa Home para o Home da casa</p>
 </body>
 </html>
