Alterado a pagina home e adicionado uma imagem

--- a/home.html
+++ b/home.html
@@ -8,7 +8,8 @@
 </head>
 <body style="background-color:darkblue; color:floralwhite">
     <h1> Homer Simpson</h1>
-    <h2>Nosso site legal merece uma casa</h2>
-    <p> Uma casa Home para o Home da casa</p>
+    <div class="margin:10%; border: 2px solid #c8c8c8">
+    <img src="./imgs/hommer.jpg"> 
+    </div>
 </body>
 </html>
